# Dubproject

./: .clang-format  .editorconfig  .gitattributes  .gitignore  4.saxfx  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  do_h.py  test_loop.cpp
.claude/: settings.local.json
.claude/plans/: scene-manager-v2-corrections-p0-p1.md  scene-manager-v2-transitions.md
.github/workflows/: ci-pingpong-delay.yml  ci.yml
cmake/: FindOnnxRuntime.cmake
docs/: project-format.md
models/: content_classifier.onnx  mix_model.onnx
scripts/: ab_test_classifier.py  generate_identity_model.py  latency_test.py  prepare_dataset.py  setup.ps1  train_classifier.py  train_mix_model.py
src/: Main.cpp  MainComponent.cpp  MainComponent.h
src/dsp/: AiContentClassifier.cpp  AiContentClassifier.h  AiMixEngine.cpp  AiMixEngine.h  AutoPitchCorrect.cpp  AutoPitchCorrect.h  BeatClock.h  BpmDetector.cpp  BpmDetector.h  DelayEffect.cpp  DelayEffect.h  DspCommon.h  DspPipeline.cpp  DspPipeline.h  EffectChain.cpp  EffectChain.h  EffectChainOptimizer.cpp  EffectChainOptimizer.h  EffectFactory.cpp  EffectFactory.h  EnvelopeFilterEffect.cpp  EnvelopeFilterEffect.h  ExpressionMapper.cpp  ExpressionMapper.h  FeatureExtractor.cpp  FeatureExtractor.h  Flanger.cpp  Flanger.h  FlangerEffect.cpp  FlangerEffect.h  Harmonizer.cpp  Harmonizer.h  HarmonizerEffect.cpp  HarmonizerEffect.h  IEffect.h  InferenceThread.h  KeyDetector.cpp  KeyDetector.h  KeyResult.h  KeyboardSynth.cpp  (+41 more)
src/midi/: EwiDeviceFilter.h  MidiLearnMap.h  MidiManager.cpp  MidiManager.h  MidiNoteMapper.h
src/project/: ProjectData.h  ProjectLoader.cpp  ProjectLoader.h
src/ui/: AnimatedValue.h  Colours.h  EffectChainEditor.h  EffectEditor.h  EffectParameterSlider.h  EffectRackUnit.h  MagicButton.h  MasterSampleSelector.h  MusicVisualizerComponent.h  NeonButton.h  PedalboardPanel.h  PianoKeyboardPanel.h  PixelCloudComponent.h  PresetLibrary.h  RotaryKnob.cpp  RotaryKnob.h  SampleEditorComponent.h  SamplerChannel.h  SamplerMagicButton.h  SamplerPanel.h  SaxFXFonts.h  SaxFXLayout.h  SaxFXLookAndFeel.cpp  SaxFXLookAndFeel.h  SaxOsLookAndFeel.cpp  SaxOsLookAndFeel.h  SaxStaffPanel.h  ScaleStaffComponent.cpp  ScaleStaffComponent.h  ScaleType.h  SpatialVisualization.h  StepSequencerPanel.h
src/util/: PcmDownmix.h
tests/: CMakeLists.txt  TestHelpers.h  test_ai_classifier.cpp  test_ai_mix_engine.cpp  test_effect_chain.cpp  test_ewi_filter.cpp  test_feature_extractor.cpp  test_flanger.cpp  test_harmonizer.cpp  test_inference_thread.cpp  test_keyboard_synth.cpp  test_midi_mapper.cpp  test_new_effects.cpp  test_onnx_benchmark.cpp  test_onnx_inference.cpp  test_optimizer.cpp  test_p0_load.cpp  test_pingpongdelay.cpp  test_pipeline.cpp  test_placeholder.cpp  test_project.cpp  test_ring_buffer.cpp  test_sampler.cpp  test_scene_manager.cpp  test_slot_dynamics_ab.cpp  test_step6.cpp  test_yin.cpp
tests/fixtures/p0/: QA_RESULTS.md  README.md  generate_fixtures.py
tests/models/: identity.onnx
web/: index.html
web/src/: main.js
web/src/audio/: AudioBufferPool.js  SceneManager.js  Scheduler.js
web/src/styles/: scene-selector.css
web/src/ui/: SceneSelectorUI.js
